# finance-app

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  test_ui.html
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_budget_limits.py  0003_add_recurring_transactions.py  0004_add_category_parent_id.py  0005_add_ai_command_cache.py  0006_subscription_expires_at.py
app/: main.py
app/api/v1/: ai.py  auth.py  categories.py  health.py  limits.py  recurring.py  subscriptions.py  transactions.py  users.py  webhooks.py
app/core/: config.py  database.py  deps.py  security.py  telegram.py
app/models/: ai.py  transaction.py  user.py
app/schemas/: ai.py  auth.py  category.py  limit.py  recurring.py  transaction.py  user.py
app/services/: ai.py  auth.py  categories.py  limits.py  recurring.py  subscription_expiry.py  subscriptions.py  transactions.py  users.py
backend/: api.py  auth.py  bot_notify.py  config.py  database.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  charts.js
frontend/js/screens/: add.js  categories.js  history.js  home.js  limits.js  more.js  recurring.js  stats.js
migrations/: 001_init.sql
plan/: DB_Schema.html  FinanceAI_Plan.html  start.txt
tests/: conftest.py  test_ai.py  test_auth.py  test_categories.py  test_transactions.py  test_users.py
